styled nav links

--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -24,6 +24,10 @@ $bg-grey: rgba(236,237,245,0.94);
 
 }
 
+header {
+    box-shadow: 0 1px 2px rgba(0,0,0,0.25);
+}
+
 .col {
     margin-bottom: 3rem;
 }
@@ -32,6 +36,7 @@ html {
     font-size: 62.5%;
     font-family: 'Rubik', sans-serif;
     text-rendering: optimizeLegibility;
+    transition: all 0.25s ease;
 }
 
 main {
@@ -41,6 +46,7 @@ main {
 .hero-wrapper {
     background-color: $bg-grey;
 }
+
 
 .hero {
     height: 100vh;
@@ -73,12 +79,20 @@ main {
         line-height: 5.2rem;
         text-align: center;
         text-decoration: none;
+        transition: all 0.5s ease;
+
+        &:hover {
+            background-color: $orange;
+            color: $white;
+        }
     }
 
     & i {
         padding-left: 1rem;
         color: $orange;
     }
+
+
 }
 
 .hero-h1 h1 {
@@ -125,7 +139,8 @@ nav {
     background-color: white;
     height: 6.5rem;
     padding-left: 11px;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    width: 80vw;
+    margin: 0 auto;
 }
 
 .nav-link {
@@ -133,4 +148,10 @@ nav {
     color: #616161;
     text-transform: uppercase;
     text-decoration: none;
+    
+    &:hover {
+        color: $orange;
+        text-decoration: underline solid $orange;
+    }
+
 }
