--- a/resources/css/style-output.css
+++ b/resources/css/style-output.css
@@ -112,10 +112,16 @@ nav {
   background-color: white;
   height: 6.5rem;
   padding-left: 11px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15); }
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  width: 80vw;
+  margin: 0 auto;
+  transition: all 0.25s ease; }
 
 .nav-link {
   font-size: 1.4rem;
   color: #616161;
   text-transform: uppercase;
   text-decoration: none; }
+  .nav-link:hover {
+    color: #D84315;
+    font-weight: 500; }
