--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -6,6 +6,11 @@ $bg-grey: rgba(236,237,245,0.94);
 
 @import 'xteaser';
 
+$left-spacer: 15%;
+$right-spacer: 15%;
+
+$space-m: 3.8rem;
+$space-l: 5.2rem;
 
 * {
     box-sizing: border-box;
@@ -24,8 +29,13 @@ $bg-grey: rgba(236,237,245,0.94);
 
 }
 
-header {
-    box-shadow: 0 1px 2px rgba(0,0,0,0.25);
+.bg-img {
+    z-index: 1;
+    position: absolute;
+    background: url(/resources/css/img/hero-bg.jpg);
+    top: 0;
+    height: 100vh;
+    width: 100vw;
 }
 
 .col {
@@ -39,39 +49,94 @@ html {
     transition: all 0.25s ease;
 }
 
-main {
-    /* background: url("./img/hero-bg.jpg") no-repeat left top; */
+body {
+    background: $bg-grey;
+}
+
+.grid {
+    display: grid;
+    height: 100%;
+    width: 100%;
+    grid-template-columns: $left-spacer 1fr 1fr 1fr 1fr $right-spacer;
+    grid-template-rows: 1fr;
+    grid-gap: 0px 0px;
+    grid-template-areas: ". grid-1 grid-2 grid-3 grid-4 .";
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    pointer-events: none;
+}
+
+.grid > * {
+    border-left: 2px solid $grey-light;
+}
+
+.grid :last-child {
+    border-right: 2px solid $grey-light;
+}
+
+.grid-1 {
+    grid-area: grid-1;
+}
+
+.grid-2 {
+    grid-area: grid-2;
+}
+
+.grid-3 {
+    grid-area: grid-3;
+}
+
+.grid-4 {
+    grid-area: grid-4;
+}
+
+.hero {
+    z-index: 3;
+    position: relative;
     background: $bg-grey;
 }
 
 .hero-wrapper {
-    background-color: $bg-grey;
+    height: 100vh;
+    width: 100% - $left-spacer - $right-spacer;
+    margin: 0 auto;
+    padding-top: 20rem;
+}
+  
+h1 {
+    display: inline-block;
+    width: 100%;
+    font-weight: 900;
+    font-size: 5rem;
+    line-height: 140%;
+    color: $grey-dark;
+    position: relative;
+    margin-bottom: $space-m;
+
+    &::after {
+        content: '';
+        display: block;
+        bottom: -18px;
+        position: absolute;
+        height: 3px;
+        width: 17.5rem;
+        background-color: $orange;
+    }
 }
 
-
-.hero {
-    height: 50vh;
-    width: 810px;
-    margin: 0 auto;
-    padding-top: 162px;
-    border-left: 1px solid $white;
+.hero-items {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-  /*   grid-template-columns: repeat(2, 50%);
-    grid-template-rows: 12rem 12rem;
-    grid-gap: 1px 1px;
-    grid-template-areas: "hero-h1 ." "hero-subhead hero-button"; */
-  }
-  
-.hero-h1 { 
-    /* grid-area: hero-h1;  */
-    flex-basis: 100%;
+    align-items: flex-end;
 }
 
 .hero-button { 
-    /* grid-area: hero-button;  */
-    align-self: end;
+    /* grid-area: hero-button;
+    align-self: end;*/
 
     & a {
         color: $orange;
@@ -84,57 +149,38 @@ main {
         text-align: center;
         text-decoration: none;
         transition: all 0.5s ease;
+        border: 1px solid $orange;
 
          &:hover {
             background-color: $orange;
             color: $white;
         } 
-
-      
     }
 
     & i {
         padding-left: 1rem;
     } 
-
-
-}
-
-.hero-h1 h1 {
-    font-weight: 900;
-    font-size: 3.6rem;
-    display: block;
-    width: 340px;
-    line-height: 3.8rem;
-    color: $grey-dark;
-    position: relative;
-
-    &::after {
-        content: '';
-        display: block;
-        bottom: -18px;
-        position: absolute;
-        height: 3px;
-        width: 17.5rem;
-        background-color: $orange;
-
-    }
-
 }
 
 .hero-subhead {
-   /*  grid-area: hero-subhead;  */
-    font-size: 1.8rem;
-    line-height: 150%;
+    font-size: 2rem;
+    line-height: 160%;
     color: $grey-dark;
     font-weight: 300;
-    align-self: end;
     flex-basis: 50%;
-
 }
 
 .hero-subhead_bold {
     font-weight: 500;
+}
+
+header {
+    box-shadow: 0 1px 2px rgba(0,0,0,0.25);
+    position: fixed;
+    z-index: 4;
+    left: 0;
+    right: 0;
+    background: $white;
 }
 
 nav {
@@ -145,9 +191,8 @@ nav {
     background-color: white;
     height: 6.5rem;
     padding-left: 11px;
-    width: 80vw;
+    width: 80%;
     margin: 0 auto;
-    transition: all 0.5s ease-in;
 }
 
 .nav-link {
@@ -157,7 +202,7 @@ nav {
     text-decoration: none;
     display: block;
     line-height: 6.5rem;
-    width: 10%;
+    width: 13rem;
     text-align: center;
     
     &:hover {
@@ -167,9 +212,82 @@ nav {
 
 }
 
-.content-1 {
-    width: 81rem;
+.content-wrapper {
+    position: relative;
+    z-index: 3;
+}
+
+.content {
+    width: 100% - $left-spacer - $right-spacer;
     margin: 0 auto;
     height: 50vh;
-    background-color: $bg-grey;
+    display: flex;
+    padding-top: $space-l;
+
+
+    & h2 {
+        font-size: 3.2rem;
+        color: #D84315;
+        font-weight: 900;
+        display: inline-block;
+        width: 29rem;
+        flex-basis: 50%;
+
+        &::after {
+            content: '';
+            position: relative;
+            bottom: -20px;
+            display: block;           
+            height: 10px;
+            width: 17.5rem;
+            background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAIUlEQVQYV2O84Sz6n4GBgUFj72tGEM2IIQASRQZgZcgAAKvtCAUJeeitAAAAAElFTkSuQmCC);
+        }
+    }
+
+    &_1 {
+        flex-basis: 50%;
+    }
+
+    h3 {
+        font-size: 1.4rem;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        padding-bottom: $space-m;
+
+        &::after {
+            content: '';
+            position: relative;
+            bottom: -10px;
+            display: block;           
+            height: 2px;
+            width: 8rem;
+            background: $white;
+        }
+    }
+
+    p {
+        font-size: 1.5rem;
+        font-weight: 300;
+        line-height: 150%;
+        padding-bottom: $space-l;
+        display: inline-block;
+        width: 35rem;
+    }
+
 }
+
+.content-2 {
+    height: 200px;
+    width: 100%;
+}
+
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 200px;
+    background-color: $orange;
+    background-image: url("");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+  }
