--- a/resources/css/_particles.scss
+++ b/resources/css/_particles.scss
@@ -11,3 +11,12 @@
     background-size: cover;
     background-position: 50% 50%;
 }
+
+#particles-js2 {
+    position: absolute;
+    width: 100%;
+    height: 200px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+}
