--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -46,6 +46,15 @@
   background-position: 50% 50%;
 }
 
+#particles-js2 {
+  position: absolute;
+  width: 100%;
+  height: 200px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
 .grid {
   display: -ms-grid;
   display: grid;
@@ -95,6 +104,155 @@
   -ms-grid-row: 1;
   -ms-grid-column: 5;
   grid-area: grid-4;
+}
+
+.content-wrapper {
+  position: relative;
+  z-index: 3;
+}
+
+@media screen and (min-width: 320px) and (max-width: 600px) {
+  .content {
+    width: 85%;
+    background-color: #2d2d2d;
+  }
+  .content h2 {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 601px) {
+  .content {
+    width: 70%;
+  }
+  .content h2 {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+    width: 29rem;
+  }
+}
+
+.content {
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 5.2rem;
+  margin-bottom: 5.2rem;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.content h2 {
+  font-size: 3.2rem;
+  color: #D84315;
+  font-weight: 900;
+  display: inline-block;
+  -webkit-transition: all 0.7s ease-in-out;
+  transition: all 0.7s ease-in-out;
+}
+
+.content h2::after {
+  content: '';
+  position: relative;
+  bottom: -20px;
+  display: block;
+  height: 10px;
+  width: 17.5rem;
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAIUlEQVQYV2O84Sz6n4GBgUFj72tGEM2IIQASRQZgZcgAAKvtCAUJeeitAAAAAElFTkSuQmCC);
+}
+
+.content_1 {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+.content h3 {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  padding-bottom: 3.8rem;
+}
+
+.content h3::after {
+  content: '';
+  position: relative;
+  bottom: -10px;
+  display: block;
+  height: 2px;
+  width: 8rem;
+  background: #ffffff;
+}
+
+.content p {
+  font-size: 1.5rem;
+  font-weight: 300;
+  line-height: 150%;
+  padding-bottom: 5.2rem;
+  display: inline-block;
+  width: 35rem;
+}
+
+.content:hover h2 {
+  color: #c13c13;
+}
+
+.box-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.box-wrapper h3 {
+  margin-top: 2rem;
+}
+
+.content_box {
+  height: 24rem;
+  width: 24rem;
+  background-color: rgba(216, 67, 21, 0.15);
+  padding-right: 12rem;
+  padding-bottom: 3.8rem;
+}
+
+.content-quote {
+  width: 70%;
+  margin: 0 auto;
+  padding-top: 5.2rem;
+  margin-bottom: 5.2rem;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.content-quote .quote-container {
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAK0lEQVQoU2NkIBIwEqmOgQ4KbziL/gc5R2PvaxTbMKwmWiEuz9HBM7isBgBlswgLnWYgYAAAAABJRU5ErkJggg==);
+  height: 30vh;
+  padding-left: 15.6rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.content-quote .quote-container p {
+  font-size: 3.2rem;
+  font-weight: 700;
+  line-height: 150%;
+}
+
+.content-quote .quote-container p .highlight {
+  background-color: #D84315;
+  color: #ffffff;
+  padding: 0 3.8rem 0 3.8rem;
 }
 
 * {
@@ -266,90 +424,5 @@ nav {
 .nav-link:hover {
   border-bottom: 3px solid #D84315;
   font-weight: 500;
-}
-
-.content-wrapper {
-  position: relative;
-  z-index: 3;
-}
-
-.content {
-  width: 70%;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-top: 5.2rem;
-}
-
-.content h2 {
-  font-size: 3.2rem;
-  color: #D84315;
-  font-weight: 900;
-  display: inline-block;
-  width: 29rem;
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-}
-
-.content h2::after {
-  content: '';
-  position: relative;
-  bottom: -20px;
-  display: block;
-  height: 10px;
-  width: 17.5rem;
-  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAIUlEQVQYV2O84Sz6n4GBgUFj72tGEM2IIQASRQZgZcgAAKvtCAUJeeitAAAAAElFTkSuQmCC);
-}
-
-.content_1 {
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-}
-
-.content h3 {
-  font-size: 1.4rem;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  padding-bottom: 3.8rem;
-}
-
-.content h3::after {
-  content: '';
-  position: relative;
-  bottom: -10px;
-  display: block;
-  height: 2px;
-  width: 8rem;
-  background: #ffffff;
-}
-
-.content p {
-  font-size: 1.5rem;
-  font-weight: 300;
-  line-height: 150%;
-  padding-bottom: 5.2rem;
-  display: inline-block;
-  width: 35rem;
-}
-
-.box-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.box-wrapper > .content_box {
-  height: 12rem;
-  width: 12rem;
-  background-color: rgba(216, 67, 21, 0.15);
-  padding-right: 12rem;
 }
 /*# sourceMappingURL=style.css.map */
