--- a/resources/css/_content.scss
+++ b/resources/css/_content.scss
@@ -1,46 +1,98 @@
 
+/* --- small screens --- */
+@media screen and (min-width: 320px) and (max-width: 600px) {
+    .content {
+        width: 100% - $left-spacer / 2 - $right-spacer / 2;
+        margin-bottom: $space-m;
+        padding-top: 1rem;
+        & h2 {
+            font-size: 2rem;
+            width: 100%;
+            margin-bottom: $space-l;
+        }
+
+        p {
+            width: 30rem;
+        }
+    }
+
+    .content-quote {
+        width: 100%;
+        
+        & .quote-container { 
+            height: 20vh;
+            text-align: center;
+            
+            & p {
+                font-size: 1.6rem;
+                
+                & .highlight {
+                    padding: 0;
+                }
+            }
+        }
+    }
+}
+
+/* --- larger screens --- */
+@media screen and (min-width: 601px) {
+    .content {
+        width: 100% - $left-spacer - $right-spacer;
+        margin-bottom: $space-l;
+        padding-top: $space-l;
+        & h2 {
+            font-size: 3.2rem;
+            flex-basis: 50%;
+            width: 29rem;
+        }
+    
+        p {
+            width: 35rem;
+        }
+    }
+
+    .content-quote {
+        width: 100% - $left-spacer - $right-spacer;
+
+        & .quote-container { 
+            padding-left: 3 * $space-l;
+            height: 30vh;
+
+            & p {
+                font-size: 3.2rem;
+
+                & .highlight {
+                    padding: 0 $space-m 0 $space-m;
+                }
+            }
+        }
+    }
+    
+    
+}
+
+/* --- default --- */
 .content-wrapper {
     position: relative;
     z-index: 3;
 }
 
-@media screen and (min-width: 320px) and (max-width: 600px) {
-    .content {
-        width: 100% - $left-spacer / 2 - $right-spacer / 2;
-        background-color: #2d2d2d;
-        & h2 {
-            width: 100%;
-        }
-    }
-}
-
-@media screen and (min-width: 601px) {
-    .content {
-        width: 100% - $left-spacer - $right-spacer;
-        & h2 {
-            flex-basis: 50%;
-            width: 29rem;
-        }
-    
-    }
-}
-
 .content {
-    
     margin: 0 auto;
     display: flex;
-    padding-top: $space-l;
-    margin-bottom: $space-l;
+    flex-wrap: wrap;
     transition: all 0.5s;
 
     & h2 {
-        font-size: 3.2rem;
         color: #D84315;
         font-weight: 900;
         display: inline-block;
-        
-       
         transition: all 0.7s ease-in-out;
+
+        &.wide {
+            flex-basis: 100%;
+            margin-bottom: $space-l;
+        }
 
         &::after {
             content: '';
@@ -60,7 +112,7 @@
     h3 {
         font-size: 1.4rem;
         text-transform: uppercase;
-        letter-spacing: 2px;
+        letter-spacing: 1px;
         padding-bottom: $space-m;
 
         &::after {
@@ -72,6 +124,7 @@
             width: 8rem;
             background: $white;
         }
+
     }
 
     p {
@@ -80,12 +133,13 @@
         line-height: 150%;
         padding-bottom: $space-l;
         display: inline-block;
-        width: 35rem;
+
     }
 
     &:hover h2 {
         color: darken($color: $orange, $amount: 5);
     }
+
 
 }
 
@@ -100,17 +154,41 @@
     }
 }
 
+$bg-size: 24rem;
+$bg-pos: center/$bg-size;
+
 .content_box {
-    height: 24rem;
-    width: 24rem;
+    height: $bg-size;
+    width: $bg-size;
     background-color: rgba($orange, 0.15);
-    padding-right: 12rem;
+    
+    padding-right: $bg-size / 2;
     padding-bottom: $space-m;
+    transition: all 0.3s;
 
 }
 
+
+
+#content_box {
+    &-1 {
+        background: url(/resources/img/2x/feature-explaning.png) $bg-pos;
+        &:hover {
+            background: url(/resources/img/2x/feature-explaning-rgb.png) $bg-pos;
+        }
+    }
+
+    &-2 {
+        background: url(/resources/img/2x/feature-convincing.png) $bg-pos;
+        &:hover {
+            background: url(/resources/img/2x/feature-convincing-rgb.png) $bg-pos;
+        }
+    }
+}
+
+
+
 .content-quote {
-    width: 100% - $left-spacer - $right-spacer;
     margin: 0 auto;
     padding-top: $space-l;
     margin-bottom: $space-l;
@@ -118,20 +196,24 @@
 
     & .quote-container { 
         background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAK0lEQVQoU2NkIBIwEqmOgQ4KbziL/gc5R2PvaxTbMKwmWiEuz9HBM7isBgBlswgLnWYgYAAAAABJRU5ErkJggg==);
-        height: 30vh;
-        padding-left: 3 * $space-l;
+
+        
         display: flex;
         align-items: center;
         
         & p {
-            font-size: 3.2rem;
+
             font-weight: 700;
             line-height: 150%;
 
             & .highlight {
                 background-color: $orange;
                 color: $white;
-                padding: 0 $space-m 0 $space-m;
+                
+            }
+
+            & .quote-autor {
+                color: $orange;
             }
         }
     }
