--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -13,6 +13,7 @@ $space-s: 2rem;
 $space-m: 3.8rem;
 $space-l: 5.2rem;
 
+@import 'header';
 @import 'xteaser';
 @import 'particles';
 @import 'grid';
@@ -27,8 +28,92 @@ $space-l: 5.2rem;
     -moz-osx-font-smoothing: grayscale;
 }
 
+/* --- small screens --- */
 
+@media screen and (min-width: 320px) and (max-width: 600px) {
+    h1 {
+        display: inline-block;
+        width: 100%;
+        font-weight: 900;
+        font-size: 2.6rem;
+        line-height: 140%;
+        color: $grey-dark;
+        position: relative;
+        margin-bottom: $space-m;
+    
+        &::after {
+            content: '';
+            display: block;
+            bottom: -18px;
+            position: absolute;
+            height: 3px;
+            width: 17.5rem;
+            background-color: $orange;
+        }
+    } 
 
+    .hero-wrapper {
+        width: 100% - $left-spacer / 2- $right-spacer / 2;
+        padding-top: 15rem;
+    }
+
+    .hero-subhead {
+        font-size: 1.5rem;
+        line-height: 160%;
+        flex-basis: 70%;
+    }
+
+    .hero-button { 
+        & a {
+            margin-top: 1.5rem;
+            line-height: 4rem;
+        }
+    }
+}
+
+/* --- larger screens --- */
+
+@media screen and (min-width: 601px) {
+    h1 {
+        display: inline-block;
+        width: 100%;
+        font-weight: 900;
+        font-size: 5rem;
+        line-height: 140%;
+        color: $grey-dark;
+        position: relative;
+        margin-bottom: $space-m;
+    
+        &::after {
+            content: '';
+            display: block;
+            bottom: -18px;
+            position: absolute;
+            height: 3px;
+            width: 17.5rem;
+            background-color: $orange;
+        }
+    } 
+
+    .hero-wrapper {
+        width: 100% - $left-spacer - $right-spacer;
+        padding-top: 20rem;
+    }
+
+    .hero-subhead {
+        font-size: 2rem;
+        line-height: 160%;
+        flex-basis: 50%;
+    }
+
+    .hero-button { 
+        & a {
+            line-height: 5.2rem;
+        }
+    }
+}
+
+/* --- default --- */
 
 .bg-img {
     z-index: 1;
@@ -54,40 +139,15 @@ body {
     background: $bg-grey;
 }
 
-
+.hero-wrapper {
+    height: 100vh;
+    margin: 0 auto;
+}
 
 .hero {
     z-index: 3;
     position: relative;
     background: $bg-grey;
-}
-
-.hero-wrapper {
-    height: 100vh;
-    width: 100% - $left-spacer - $right-spacer;
-    margin: 0 auto;
-    padding-top: 20rem;
-}
-  
-h1 {
-    display: inline-block;
-    width: 100%;
-    font-weight: 900;
-    font-size: 5rem;
-    line-height: 140%;
-    color: $grey-dark;
-    position: relative;
-    margin-bottom: $space-m;
-
-    &::after {
-        content: '';
-        display: block;
-        bottom: -18px;
-        position: absolute;
-        height: 3px;
-        width: 17.5rem;
-        background-color: $orange;
-    }
 }
 
 .hero-items {
@@ -98,9 +158,6 @@ h1 {
 }
 
 .hero-button { 
-    /* grid-area: hero-button;
-    align-self: end;*/
-
     & a {
         color: $orange;
         display: inline-block;
@@ -108,7 +165,6 @@ h1 {
         background-color: $white;
         font-weight: 700;
         font-size: 1.2rem;
-        line-height: 5.2rem;
         text-align: center;
         text-decoration: none;
         transition: all 0.5s ease;
@@ -126,51 +182,12 @@ h1 {
 }
 
 .hero-subhead {
-    font-size: 2rem;
-    line-height: 160%;
     color: $grey-dark;
     font-weight: 300;
-    flex-basis: 50%;
 }
 
 .hero-subhead_bold {
     font-weight: 500;
 }
 
-header {
-    box-shadow: 0 1px 2px rgba(0,0,0,0.25);
-    position: fixed;
-    z-index: 4;
-    left: 0;
-    right: 0;
-    background: $white;
-}
 
-nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    background-color: white;
-    height: 6.5rem;
-    padding-left: 11px;
-    width: 80%;
-    margin: 0 auto;
-}
-
-.nav-link {
-    font-size: 1.4rem;
-    color: #616161;
-    text-transform: uppercase;
-    text-decoration: none;
-    display: block;
-    line-height: 6.5rem;
-    width: 13rem;
-    text-align: center;
-    
-    &:hover {
-       border-bottom: 3px solid $orange;
-       font-weight: 500;
-    }
-
-}
