--- a/resources/css/_typography.scss
+++ b/resources/css/_typography.scss
@@ -4,6 +4,22 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+.text-white {
+    color: white;
+}
+
+.text-col-main {
+    color: $main-color;
+}
+
+.text-uppercase {
+    text-transform: uppercase;
+}
+
+.text-italic {
+   font-style: italic;
+}
+
 h1 {
     color: $main-color;
     font-size: 6.4rem;
@@ -16,19 +32,44 @@ h1 {
     font-weight: 300;
     font-size: 4.8rem;
     
-    margin-bottom: 2rem;
 }
 
 .h1-subhead {
     font-size: 2.4rem;
     font-weight: 400;
-    margin-bottom: 1rem;
+
 }
 
-.text-white {
-    color: white;
+h2 {
+    font-size: 3.2rem;
+    color: $main-color;   
 }
 
-.text-uppercase {
-    text-transform: uppercase;
+.h2-thin {
+    color: $grey-medium;
+    font-size: 2.6rem;
+    font-weight: 300;
+
+    &:before {
+        display: inline-block;
+        content: '';
+        margin-right: 1rem;
+        background-color: $grey-medium;
+        height: 2px;
+        width: 4rem;
+    }
 }
+
+h3 {
+    font-size: 2.2rem;
+    font-weight: 500;
+}
+
+p {
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 140%;
+}
+
+
+
