--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -1,5 +1,6 @@
-$main-color: rgb(24, 134, 185);
+$main-color: #1886b9;
 $grey-dark: #2d2d2d;
+$grey-medium: #c4c4c4;
 $grey-light: #f4f4f4;
 $white: #ffffff;
 $bg-grey-opaque: rgb(236,237,245);
@@ -30,11 +31,13 @@ $space-l: 5.2rem;
 @import "vendors/bootstrap/scss/grid";
 @import "vendors/bootstrap/scss/type";
 @import "vendors/bootstrap/scss/jumbotron";
-
+@import "vendors/bootstrap/scss/forms";
+@import "vendors/bootstrap/scss/custom-forms";
 
 @import 'particles';
 
 @import 'typography';
+@import 'site-forms';
 
 * {
     box-sizing: border-box;
@@ -48,19 +51,141 @@ $space-l: 5.2rem;
 
 
 body {
-    background: $bg-grey;
+    background: $white;
 }
 
-div {
-    padding: 0.5em;
+.site-content {
     background-color: rgba($color: #000000, $alpha: 0.1); 
+}
+
+.system-content {
+    background-color: $grey-light;
 }
 
 .wrapper-1140 {
     max-width: 1140px;
-    margin: 0 auto;
+    //margin: 0 auto;
 }
 
 .hero {
-    padding-top: 15rem;
+    padding: 15rem 0 10rem 0;
+   
 }
+
+.hero-img {
+    background-image: url(img/hero-bg.jpg);
+    background-attachment: fixed;
+    background-color: darken($main-color, 20%);
+    background-blend-mode: multiply;
+}
+
+.a-as-btn {
+    display: block;
+    width: 17.5rem;
+    height: 5.2rem;
+    border: 2px solid $white;
+    background-color: transparent;
+    text-decoration: none;
+    line-height: 5.2rem;
+    text-align: center;
+    font-size: 1.2rem;
+    & i {
+        padding-left: 1rem;
+    }
+}
+
+.icon-box {
+    padding: 0 3rem 0 6.5rem;
+    display: block;
+
+    & i{
+        font-size: 3rem;
+        position: absolute;
+        left: 2.4rem;
+    }
+}
+
+.system-row {
+    & > div {
+        border-right: 1px solid $grey-medium;
+    }
+
+    & > div:not(:first-child) {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+    }
+}
+
+.section-vorteile {
+    & .moving-box:hover .overlay-box {
+        top: 0;
+        transform: translate(0,0);
+    }
+
+    & .img-box {
+        position: relative;
+        overflow: hidden;
+        display: inline-block;
+        
+
+        & figure {
+            margin: 0;
+        }
+
+        & a {
+            display: block;
+
+            & img {
+                display: block;
+                max-width: 100%;
+                height: auto;
+            }
+        }
+    }
+
+    & .overlay-box {
+        background-color: rgba($color: #000000, $alpha: 0.6);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: -60px;
+        transform: translate(0,100%);
+        display: block;
+        transition: all 1s ease;
+        
+
+        & h4 {
+            line-height: 60px;
+        }
+    }
+
+    & .inner-box {
+        position: relative; 
+        padding-left: 8rem;
+        padding-right: 2rem;
+    }
+
+    & .icon-box-mover {
+        position: absolute;
+        width: 60px;
+        height: 100%;
+        text-align: center;
+        background: $main-color;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        line-height: 60px;
+        color: $white;
+
+        & i {
+            line-height: 60px;
+            font-size: 2rem;
+        }
+    }
+}
+
+
+
