--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6692,9 +6692,9 @@ h3 {
 }
 
 p {
-  font-size: 1.4rem;
-  font-weight: 400;
-  line-height: 140%;
+  font-size: 1.5rem;
+  font-weight: 300;
+  line-height: 150%;
 }
 
 .form-request {
@@ -6860,9 +6860,6 @@ body {
   position: relative;
   overflow: hidden;
   display: inline-block;
-}
-
-.section-vorteile .img-box figure {
   margin: 0;
 }
 
@@ -6898,12 +6895,12 @@ body {
   position: relative;
   padding-left: 8rem;
   padding-right: 2rem;
+  height: 100%;
 }
 
 .section-vorteile .icon-box-mover {
   position: absolute;
   width: 60px;
-  height: 100%;
   text-align: center;
   background: #1886b9;
   left: 0;
@@ -6914,7 +6911,21 @@ body {
 }
 
 .section-vorteile .icon-box-mover i {
-  line-height: 60px;
   font-size: 2rem;
+}
+
+.section-social {
+  background-color: #1886b9;
+}
+
+.section-trainer img {
+  overflow: hidden;
+  display: inline-block;
+  position: relative;
+  max-width: 100%;
+}
+
+.section-testimonial {
+  background-color: #f4f4f4;
 }
 /*# sourceMappingURL=style.css.map */
